<resources>
    <string name="add_amount">внести сумму</string>
    <string name="amount_format">%d ₽</string>
    <string name="amount_format_float">%.2f ₽</string>
    <string name="amount_hint">0 ₽</string>
    <string name="apply_changes">Внести изменения</string>
    <string name="app_name">t-bank</string>
    <string name="Are_you_shure_delete">Вы уверены, что хотите удалить цель \"%1$s\"?</string>
    <string name="btn_add">Добавить</string>
    <string name="btn_add_category">Добавить новую категорию</string>
    <string name="btn_finish">Завершить</string>
    <string name="btn_finish_setup">Завершить настройку</string>
    <string name="btn_next">далее</string>
    <string name="btn_save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="category">Категория</string>
    <string name="change">Изменить</string>
    <string name="change_password">Замените пароль</string>
    <string name="change_phone">Замените номер телефона</string>
    <string name="change_profile">Редактировать профиль</string>
    <string name="changes_saved">Изменения сохранены</string>
    <string name="check_sms_title">Проверьте свои СМС</string>
    <string name="choose_a_move">Выберите действие</string>
    <string name="communal_services">Коммунальные услуги</string>
    <string name="color_header_change">Измените цвет категории</string>
    <string name="confirm_button">Подтвердить</string>
    <string name="confirm_password_hint">Введите пароль еще раз</string>
    <string name="continue_button">Продолжить</string>
    <string name="create_account_button">Создать аккаунт</string>
    <string name="dark_theme">Темная тема</string>
    <string name="delete">Удалить</string>
    <string name="did_not_receive_code">Еще не получили код?</string>
    <string name="Do_you_want_delete_goal">Удалить цель?</string>
    <string name="edit_goal_title">Измените цель</string>
    <string name="english">English</string>
    <string name="end_date_format">Окончание: %s</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="enter_category_name">Введите название категории</string>
    <string name="enter_budget">Введите бюджет</string>
    <string name="enter_valid_amount">Введите корректную сумму</string>
    <string name="error_empty_new_password">Введите новый пароль</string>
    <string name="error_empty_old_password">Введите старый пароль</string>
    <string name="error_empty_phone">Введите номер телефона</string>
    <string name="error_invalid_phone">Некорректный номер телефона</string>
    <string name="expenses">Расходы</string>
    <string name="failed_to_create_goal">Не удалось создать цель: %1$s</string>
    <string name="failed_to_update_goal">Не удалось изменить цель</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="forgot_password_subtitle">Введите свой номер телефона, чтобы сбросить пароль</string>
    <string name="get_code_button">Получить код</string>
    <string name="goals">Финансовые цели</string>
    <string name="goal_achieved">Цель достигнута!</string>
    <string name="goal_created_successfully">Цель успешно сохранена!</string>
    <string name="goal_name">Название цели</string>
    <string name="goal_not_achieved">Цель не достигнута</string>
    <string name="goal_updated_successfully">Цель обновлена успешно</string>
    <string name="header_category_setup">Настройте категории</string>
    <string name="header_color_selection">Выберите цвет категории</string>
    <string name="hint_goal_name">Название</string>
    <string name="hint_new_password">Введите новый пароль</string>
    <string name="hint_old_password">Введите старый пароль</string>
    <string name="hint_phone_number">+7-XXX-XXX-XX-XX</string>
    <string name="language">Язык</string>
    <string name="login_error">Ошибка входа</string>
    <string name="login_existing_account_button">Войти в аккаунт</string>
    <string name="login_success">Вход успешен</string>
    <string name="login_title">Войдите в свой профиль</string>
    <string name="login_with_button">Войти с T-id</string>
    <string name="my_financial_goals">Мои финансовые цели</string>
    <string name="my_financials">Мои финансы</string>
    <string name="my_spendings">Мои расходы</string>
    <string name="name">Имя фамилия</string>
    <string name="or_text">или</string>
    <string name="password_hint">Пароль</string>
    <string name="percentage_format">%1$d%%</string>
    <string name="phone_hint">Номер телефона</string>
    <string name="pie_chart_center_text">%1$s\n%2$f ₽</string>
    <string name="please_fill_all_fields_correctly">Пожалуйста, заполните поля корректно</string>
    <string name="products">Продукты</string>
    <string name="profile">Профиль</string>
    <string name="registration_title">Регистрация</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="remaining_amount_format">%d ₽ осталось</string>
    <string name="reset_password_subtitle">Создайте новый пароль. Убедитесь, что он отличается от предыдущих в целях безопасности</string>
    <string name="reset_password_title">Придумайте новый пароль</string>
    <string name="resend_code">Отправить код повторно</string>
    <string name="russian">Русский</string>
    <string name="set_password_title">Придумайте новый пароль</string>
    <string name="spended">%1$.2f ₽\nпотрачено</string>
    <string name="sms_verification_subtitle">Мы отправили СМС с кодом на номер +7 (XXX) XXX-XX-XX. Введите 5-значный код, указанный в СМС.</string>
    <string name="spent_amount_format">%d ₽ потрачено</string>
    <string name="spending_history">История расходов</string>
    <string name="submit_button">Отправить код</string>
    <string name="text_select_date">Выберите дату</string>
    <string name="title_budget_distribution">Распределите бюджет</string>
    <string name="title_distribute_percentages">Распределите проценты</string>
    <string name="title_edit_profile">Редактирование профиля</string>
    <string name="title_expense_history">История расходов</string>
    <string name="title_my_finances">Мои финансы</string>
    <string name="title_new_category">Новая категория</string>
    <string name="title_new_goal">Новая цель</string>
    <string name="title_setup_category">Настройте категорию</string>
    <string name="update_goal">Обновить цель</string>
    <string name="total">%1$s ₽</string>
</resources>
