<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnGetCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_background_gray"
        android:text="@string/get_code_button"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/tlPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/btnGetCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_text"
            android:textSize="14sp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/gray" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/gray" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLoginWithGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_with_button"
        android:textAllCaps="false"
        android:drawablePadding="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnLoginExistingAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_existing_account_button"
        android:textAllCaps="false"
        android:backgroundTint="@color/gray"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/btnLoginWithGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>